fixed overflowing H1s

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ section {
 }
 
 h1 {
-	font-size: 10rem;
+	font-size: 6vw;
 	margin-bottom: 1rem;
 }
 
@@ -269,10 +269,6 @@ button:hover {
 	/* Mobile styles here */
 	.content {
 		max-width: 80%;
-	}
-
-	h1 {
-		font-size: 5rem;
 	}
 
 	.iconned_button {
